--- a/TODO
+++ b/TODO
@@ -3,9 +3,8 @@
 - On single tap a scrum card is shown with an animation - DONE
 - On another single tap on a shown scrum card it is hidden with an animation - DONE
 - Deploy to the phone - DONE
-
-- On slide left navigation to the previous card
-- On slide right navigation to the next card
+- On slide left navigation to the previous card - DONE
+- On slide right navigation to the next card - DONE
 
 - Visual adjustments
   -- Use some custom visually appealing font
@@ -13,7 +12,9 @@
   -- Horizontal/vertical alignment issues
   -- Show small numbers at the top left/bottom right corners
 
-- Animations
+- Animations (if needed)
+  -- Selecting a card
+  -- Swipe
 
 - Show attribution information, version, some brief info (About menu)
 - Make sure that the app works in Chrome as well
