--- a/TODO
+++ b/TODO
@@ -11,13 +11,12 @@
   -- Horizontal/vertical alignment issues - DONE
   -- Show small numbers at the top left/bottom right corners - not needed, 'flat' minimalistic design instead
 - Provide a proper icon - DONE
-
 - Animations (if needed)
-  -- Selecting a card
-  -- Swipe
+  -- Selecting a card - DONE
+  -- Swipe - DONE
 
 - Show attribution information, version, some brief info (About menu)
-- Make sure that the app works in Chrome as well
+- Make sure that the app works in Chrome as well, desktop Firefox
 - Allow to customize the background and appearance of the cards: few predefined themes?
 - Tests and some build infrastructure for the app?
 - Publish to the store
