Tabbar with settings and about menu items is shown at the bottom.
The menu items are not yet implemented, tabbar is always shown by default.

--- a/TODO
+++ b/TODO
@@ -16,6 +16,7 @@
   -- Swipe - DONE
 
 - Show attribution information, version, some brief info (About menu)
+- Re-factoring: use separate CSS files and import them
 - Make sure that the app works in Chrome as well, desktop Firefox
 - Allow to customize the background and appearance of the cards: few predefined themes?
 - Tests and some build infrastructure for the app?
