Updated TODO list.

--- a/TODO
+++ b/TODO
@@ -1,23 +1,4 @@
-- Show scrum cards in a grid-like layout: 0, 1/2, 1, 2, 3, 5, 8, 13, 20, 40, 100, ?, infinity, coffee - DONE
-- For Infinity and Coffee icons are used - DONE
-- On single tap a scrum card is shown with an animation - DONE
-- On another single tap on a shown scrum card it is hidden with an animation - DONE
-- Deploy to the phone - DONE
-- On slide left navigation to the previous card - DONE
-- On slide right navigation to the next card - DONE
-- Visual adjustments
-  -- Use some custom visually appealing font - DONE
-  -- Labels should be larger on cards? - DONE
-  -- Horizontal/vertical alignment issues - DONE
-  -- Show small numbers at the top left/bottom right corners - not needed, 'flat' minimalistic design instead
-- Provide a proper icon - DONE
-- Animations (if needed)
-  -- Selecting a card - DONE
-  -- Swipe - DONE
-- Show attribution information, version, some brief info (About menu) - DONE
-
-- Allow to customize the background and appearance of the cards: few predefined themes?
 - Re-factoring: use separate CSS files and import them
 - Make sure that the app works in Chrome as well, desktop Firefox
 - Tests and some build infrastructure for the app?
-- Publish to the store
+- Bug. Landscape orientation, maximizing/minimizing menu, the maximize button is briefly shown at the left corner
